# cli

./: .ghci  .gitignore  COPYING  Cli.cabal  README  README.md  Setup.hs
demo/hs/: .ghci  Cli-Demo.cabal  Main.hs
src/hs/System/Console/: Cli.hs
src/hs/System/Console/Cli/: Coerce.hs  Data.hs  Dispatch.hs
test/hs/: .ghci  Cli-Test.cabal  Main.hs
test/hs/Cli/: Tests.hs
